--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.5.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.0.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
